# MegaWrapper

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  USAGE.md  pyproject.toml  requirements.txt
examples/: dual_motor.py  endless_servo_sweep.py  endless_sweep.py  keyboard_control.py  move_smooth.py  servo_test.py  single_motor.py  tank_drive.py
src/megawrapper/: __init__.py  board.py  exceptions.py  motor.py  servo.py  tcs34725.py  utils.py
tests/: conftest.py  test_board.py  test_exceptions.py  test_integration.py  test_motor.py  test_servo.py  test_tcs34725.py  test_utils.py
